# mica

./: .gitignore  Cargo.toml  LICENSE  README.md  language.md  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: build.yml
code/: README.md  break.mi  busy-loop.lua  busy-loop.mi  closure.mi  error.mi  functions.lua  functions.mi  functions.py  if.mi  print.mi
docs/: language.md  standard-library.md
examples/: hello-mica.rs
mica-cli/: Cargo.toml  README.md
mica-cli/src/: main.rs
mica-hl/: Cargo.toml  README.md
mica-hl/src/: builtin_traits.rs  engine.rs  error.rs  fiber.rs  function.rs  lib.rs  stdlib.rs  traits.rs  types.rs  userdata.rs  value.rs
mica-hl/src/value/: mod.rs  raw.rs
mica-language/: Cargo.toml  README.md  build.rs
mica-language/src/: ast.rs  bytecode.rs  codegen.rs  common.rs  gc.rs  lexer.rs  lib.rs  parser.rs  value.rs  vm.rs
mica-language/src/value/: closures.rs  dicts.rs  lists.rs  mod.rs  nanbox.rs  portable.rs  structs.rs  traits.rs
mica-language/src/value/impls/: mod.rs  nanbox.rs  portable.rs
mica-std/: Cargo.toml  README.md
mica-std/src/: builtins.rs  core.rs  gc.rs  io.rs  lib.rs
mica-std/src/builtins/: dict.rs  list.rs  mod.rs  number.rs  string.rs
mica-std/src/iterators/: counters.mi  counters.rs  mod.rs
src/: ast.rs  bytecode.rs  codegen.rs  common.rs  corelib.rs  engine.rs  error.rs  hl.rs  interpreter.rs  lexer.rs  lib.md  lib.rs  ll.rs  main.rs  parser.rs  tests.rs  value.rs  vm.rs
src/corelib/: builtins.rs  core.rs  gc.rs  io.rs  iterators.rs  pair.rs
src/corelib/builtins/: dict.rs  list.rs  number.rs  record.rs  string.rs  tuple.rs
src/corelib/iterators/: counters.rs  dict.rs  list.rs  string.rs
src/hl/: builtin_traits.rs  corelib.rs  engine.rs  error.rs  fiber.rs  function.rs  generated.rs  lib.rs  stdlib.rs  traits.rs  types.rs  userdata.rs  value.rs
src/hl/value/: raw.rs  tuple_into_value.rs  tuple_try_from_value.rs
src/ll/: ast.rs  bytecode.rs  codegen.rs  common.rs  error.rs  gc.rs  lexer.rs  parser.rs  value.rs  vm.rs
src/ll/bytecode/: chunk.rs  dispatch_table.rs  environment.rs  function.rs  impls.rs  library.rs  opcode.rs  opr24.rs
src/ll/codegen/: assignment.rs  calls.rs  control_flow.rs  functions.rs  impls.rs  literals.rs  operators.rs  structs.rs  traits.rs  tuples.rs  variables.rs
src/ll/value/: closures.rs  dicts.rs  impls.rs  lists.rs  records.rs  structs.rs  traits.rs  tuples.rs
tests/: README.md  runner.rs  runner.sh
tests/api/: functions.rs  mod.rs  stress.rs  traits.rs  value.rs
tests/api/traits/: binding_type_that_implements_builtin_traits.mi  exposing_traits_from_rust.mi
tests/basics/: assert.mi  if.mi  while.mi
tests/gc/: delete-builtin-globals.test.mi  delete-function-during-call.mi  delete-function-during-call.test.mi  repl-segv-1.sh  segv-1.test.mi  stack-overflow-1.mi  stack-overflow-1.test.mi  stress-1.mi  stress-1.skip.mi  stress-1.test.mi  stress-2.mi  stress-2.skip.mi  stress-2.test.mi
tests/language/: assert.test.mi  closures.mi  closures.test.mi  comments.mi  failing.mi  failing.test.mi  functions.mi  functions.test.mi  if.test.mi  literals.mi  operators.mi  operators.test.mi  struct.mi  struct.test.mi  traits.mi  variables.mi  variables.test.mi
tests/language/closure/: double-indirection.test.mi  immutable-captures.test.mi  mutable-captures.test.mi  mutating-double-indirection.test.mi  no-captures.test.mi  same-variable.test.mi
tests/language/dict/: string.test.mi
tests/language/for/: range.test.mi
tests/language/func/: arguments-unused.test.mi  call-closure-field.test.mi  equality.test.mi  item-result.test.mi  locals.test.mi  nop.test.mi  recursion-deep.test.mi  recursion.test.mi  resulting-expression.test.mi  return.test.mi
tests/language/if/: elif-1.test.mi  elif-2.test.mi  elif-else.test.mi  elif-nil.test.mi  empty-branches.test.mi  false-else.test.mi  false-no-else.test.mi  true-else.test.mi  true-no-else.test.mi
tests/language/list/: ord.test.mi  string.test.mi
tests/language/operator/: arithmetic-number.test.mi  logic-boolean.test.mi
tests/language/record/: equality.test.mi  order.test.mi  string.test.mi
tests/language/struct/: ergonomics-declaration.test.mi  ergonomics-impl.test.mi  impl-constructor-instance.test.mi  impl-static.test.mi
tests/language/trait/: animal-impl.test.mi  animal.test.mi  empty.test.mi  ergonomics-expression.test.mi  function-call.test.mi
tests/language/tuple/: string.test.mi
tests/language/variable/: copy.test.mi  declaration.test.mi  discard-declaration.test.mi  global-shadow.test.mi  let-invalid.test.mi  let-shadow.test.mi  undeclared.test.mi
tests/language/while/: break-with-value.test.mi  (+4 more)
tests/stdlib/: dict.mi  dict.test.mi  file.mi  gc.mi  gc.test.mi  list.mi  list.test.mi  number.mi  number.test.mi  string.mi  string.test.mi
xtask/: Cargo.toml
xtask/src/: codegen.rs  main.rs
xtask/src/codegen/: function_variants.rs
(+85 files in other folders)
