[package]
categories = ["compilers"]
description = "A simple, user-friendly, embeddable scripting language"
edition = "2021"
keywords = ["language", "scripting", "embeddable"]
license = "MIT"
name = "mica"
repository = "https://github.com/liquidev/mica"
version = "0.4.0"

[workspace]
members = [
  "mica-cli",
  "mica-hl",
  "mica-language",
  "mica-std",
]

[features]
default = []

# Enables I/O support in the standard library.
std-io = ["mica-std/io"]

[dependencies]
mica-hl = {version = "0.4.0", path = "mica-hl"}
mica-std = {version = "0.4.0", path = "mica-std"}

[[test]]
harness = false
name = "samples"
path = "tests/runner.rs"

[dev-dependencies]
libtest-mimic = "0.4.1"
