[package]
name = "mica"
description = "A simple, user-friendly, embeddable scripting language"
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/liquidev/mica"
keywords = ["language", "scripting", "embeddable"]
categories = ["compilers"]

[workspace]
members = [
   "mica-cli",
   "mica-hl",
   "mica-language",
   "mica-std",
]

[features]
default = []

# Enables I/O support in the standard library.
std-io = ["mica-std/io"]

[dependencies]
mica-hl = { version = "0.5.0", path = "mica-hl" }
mica-std = { version = "0.5.0", path = "mica-std" }

[[test]]
harness = false
name = "language"
path = "tests/runner.rs"

[dev-dependencies]
rayon = "1.5.3"
owo-colors = "3.5.0"
clap = { version = "3.2.22", features = ["derive"] }
