[package]
name = "mica"
description = "A simple, user-friendly, embeddable scripting language"
version = "0.7.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/liquidev/mica"
keywords = ["language", "scripting", "embeddable"]
categories = ["compilers"]

[workspace]
members = [
    "mica-cli",
    "xtask",
]

[features]
default = []

[dependencies]
hashbrown = { version = "0.12.1", features = ["raw"] }

[[test]]
harness = false
name = "language"
path = "tests/runner.rs"

[dev-dependencies]
rayon = "1.5.3"
owo-colors = "3.5.0"
clap = { version = "3.2.22", features = ["derive"] }

[workspace.metadata.release]
allow-branch = ["master"]
# We use a single tag for all crates, cargo-release shouldn't create its own set of tags.
tag = false
