[package]
name = "mica-cli"
description = "Command-line interface for the Mica scripting language"
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/liquidev/mica"

[[bin]]
name = "mica"
path = "src/main.rs"

[dependencies]
rustyline = "9.1.2"
structopt = "0.3.26"

mica = { version = "0.4.0", path = ".." }
