[package]
name = "mica-language"
description = "Reference implementation of the Mica scripting language"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/liquidev/mica"

[features]
default = []
# default = ["trace-vm-opcodes", "trace-vm-stack-ops"]
# default = ["trace-gc", "trace-vm-opcodes", "trace-vm-stack-ops"]

# Compile with this feature to dump all opcodes executed by the VM.
trace-vm-opcodes = []
# Compile with this feature to dump all stack operations to stdout.
trace-vm-stack-ops = []
# Compile with this feature to trace GC operations like allocation and collection.
trace-gc = []
